<resources>
    <string name="app_name">RtspStreamDemo</string>

    <string name="camera_demo">Camera Demo</string>
    <string name="flip_horizontal_button">Flip horizontal</string>
    <string name="settings">Settings</string>
    <string name="start_button">Start server</string>
    <string name="stop_button">Stop server</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="switch_flash_button">Switch flash</string>

    <!-- Preference Titles -->
    <string name="video_header">Video</string>
    <string name="audio_header">Audio</string>
    <string name="auth_header">Auth</string>

    <!-- Video Preferences -->
    <string name="bitrate_video_title">Bitrate</string>
    <string name="fps_title">FPS</string>

    <!-- Audio Preferences -->
    <string name="bitrate_audio_title">Bitrate</string>
    <string name="sample_rate_title">SampleRate</string>
    <string name="channel_title">Channel</string>

    <!-- Default Preference values -->
    <string name="bitrate_video_default_value">2500</string>
    <string name="fps_default_value">30</string>
    <string name="bitrate_audio_default_value">128</string>
    <string name="sample_rate_default_value">44100</string>
    <string name="channel_default_value">1</string>

    <!-- Preference keys -->
    <string name="prefKey_bitrate_video">videoBitrate</string>
    <string name="prefKey_fps">videoFps</string>
    <string name="prefKey_bitrate_audio">audioBitrate</string>
    <string name="prefKey_sample_rate">audioSampleRate</string>
    <string name="prefKey_channel">audioChannel</string>

</resources>
