<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/video_header">

        <EditTextPreference
            app:defaultValue="@string/bitrate_video_default_value"
            app:key="@string/prefKey_bitrate_video"
            app:title="@string/bitrate_video_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/fps_default_value"
            app:key="@string/prefKey_fps"
            app:title="@string/fps_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">

        <EditTextPreference
            app:defaultValue="@string/bitrate_audio_default_value"
            app:key="@string/prefKey_bitrate_audio"
            app:title="@string/bitrate_audio_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/sample_rate_default_value"
            app:key="@string/prefKey_sample_rate"
            app:title="@string/sample_rate_title"
            app:useSimpleSummaryProvider="true" />


        <ListPreference
            app:defaultValue="@string/channel_default_value"
            app:entries="@array/channel_values"
            app:entryValues="@array/channel_entry_values"
            app:key="@string/prefKey_channel"
            app:title="@string/channel_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
