<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pedro.rtplibrary.view.OpenGlView
        android:id="@+id/openGlView"
        app:aspectRatioMode="fill"
        app:keepAspectRatio="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/urlText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/primaryActionButton"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="@color/red"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/switchCameraButton"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/switch_camera_button" />

        <Button
            android:id="@+id/secondaryActionButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/switch_flash_button"
            android:textColor="@color/red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
